[package]
name = "crosser"
version = "0.1.0"
authors = ["majorz"]
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "2"
tar = "0.4"
flate2 = "1.0"
reqwest = { version = "0.10", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["macros"] }
crossterm = "0.16"
getrandom = "0.1"
hex = "0.3"
dkregistry = { git="https://github.com/camallo/dkregistry-rs" }
futures = "0.3"
ron = "0.5"
log = { version = "0.4", features = ["std"]}
